[gd_scene load_steps=10 format=3 uid="uid://dywrecu6pml77"]

[ext_resource type="Texture2D" uid="uid://c7v0lqb66uppf" path="res://assets/atlas1.png" id="1_gbqeo"]
[ext_resource type="Script" uid="uid://0x16271fub0a" path="res://scripts/GUI/gui_scene.gd" id="1_li5rb"]
[ext_resource type="PackedScene" uid="uid://buj7u3vemtwye" path="res://scenes/GUI/skill_slot.tscn" id="3_acekp"]
[ext_resource type="StyleBox" uid="uid://rxq74mic16cg" path="res://bg_label_stats.tres" id="4_0ehin"]
[ext_resource type="PackedScene" uid="uid://c1csmsd22qmft" path="res://scenes/GUI/gui_effects_scene.tscn" id="4_fo7ei"]
[ext_resource type="PackedScene" uid="uid://bhbym0sv2knf8" path="res://scenes/general_objects/tooltip_scene.tscn" id="5_g80tl"]

[sub_resource type="FontFile" id="FontFile_gbqeo"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/1/0/ascent = 0.0
cache/0/1/0/descent = 0.0
cache/0/1/0/underline_position = 0.0
cache/0/1/0/underline_thickness = 0.0
cache/0/1/0/scale = 1.0
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/13/0/ascent = 0.0
cache/0/13/0/descent = 0.0
cache/0/13/0/underline_position = 0.0
cache/0/13/0/underline_thickness = 0.0
cache/0/13/0/scale = 1.0
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acekp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_g80tl"]
radius = 77.4145

[node name="GuiScene" type="CanvasLayer"]
script = ExtResource("1_li5rb")

[node name="MultiplayerHUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 767.0
offset_top = 382.0
offset_right = 1170.0
offset_bottom = 507.0

[node name="Panel" type="Panel" parent="MultiplayerHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUD/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HostGameButton" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Host new game"

[node name="JoinAsPlayerButton" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_gbqeo")
theme_override_font_sizes/font_size = 32
text = "Join as Player"

[node name="PanelTL" type="Panel" parent="."]
theme_override_styles/panel = SubResource("StyleBoxFlat_acekp")

[node name="TargetRectCurrentHP" type="ColorRect" parent="PanelTL"]
layout_mode = 2
offset_left = 81.0
offset_top = 27.0
offset_right = 270.0
offset_bottom = 48.0
color = Color(0.8, 0, 0, 1)

[node name="TargetRectCurrentMana" type="ColorRect" parent="PanelTL"]
layout_mode = 2
offset_left = 80.0
offset_top = 51.0
offset_right = 263.0
offset_bottom = 66.0
color = Color(0, 0.4, 0.8, 1)

[node name="TargetAvatarBg" type="Sprite2D" parent="PanelTL"]
modulate = Color(0, 0, 0, 0.34902)
texture_filter = 1
position = Vector2(15, 10)
scale = Vector2(0.430463, 0.430463)
texture = ExtResource("1_gbqeo")
centered = false
region_enabled = true
region_rect = Rect2(1157, 1897, 155, 151)

[node name="TargetAvatar" type="Sprite2D" parent="PanelTL"]
position = Vector2(48, 42)
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_gbqeo")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="AvatarGUI" type="Sprite2D" parent="PanelTL"]
texture_filter = 1
texture = ExtResource("1_gbqeo")
centered = false
region_enabled = true
region_rect = Rect2(1760, 1440, 288, 96)

[node name="TargetLevel" type="Label" parent="PanelTL"]
layout_mode = 2
offset_left = 51.0
offset_top = 66.0
offset_right = 72.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "22"
horizontal_alignment = 1

[node name="TargetCurrentHp" type="Label" parent="PanelTL"]
layout_mode = 2
offset_left = 86.0
offset_top = 27.0
offset_right = 200.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "22"

[node name="TargetCurrentMana" type="Label" parent="PanelTL"]
layout_mode = 2
offset_left = 86.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "22"

[node name="TargetEffects" parent="PanelTL" instance=ExtResource("4_fo7ei")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 81.0
offset_top = 79.0
offset_right = 473.0
offset_bottom = 111.0

[node name="PanelBL" type="Panel" parent="."]
offset_top = 824.0
offset_right = 736.0
offset_bottom = 1080.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_acekp")

[node name="BgAvatar" type="ColorRect" parent="PanelBL"]
layout_mode = 2
offset_left = 27.0
offset_top = 46.0
offset_right = 166.0
offset_bottom = 181.0
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="MyPlayerAvatar" type="Sprite2D" parent="PanelBL"]
position = Vector2(96, 112)
scale = Vector2(1.0625, 1.0625)
texture = ExtResource("1_gbqeo")
region_enabled = true
region_rect = Rect2(256, 448, 128, 128)

[node name="FullExpRect" type="ColorRect" parent="PanelBL"]
layout_mode = 2
offset_left = 18.0
offset_top = 214.0
offset_right = 630.0
offset_bottom = 241.0
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="CurrentExpRect" type="ColorRect" parent="PanelBL"]
layout_mode = 2
offset_left = 18.0
offset_top = 214.0
offset_right = 630.0
offset_bottom = 241.0
color = Color(1.1792e-06, 0.524529, 0.107973, 1)

[node name="HpBall" type="Sprite2D" parent="PanelBL"]
modulate = Color(0.8, 0, 0, 1)
texture_filter = 1
position = Vector2(554, 70)
texture = ExtResource("1_gbqeo")
centered = false
region_enabled = true
region_rect = Rect2(1157, 1897, 155, 151)

[node name="Sprite" type="Sprite2D" parent="PanelBL"]
texture = ExtResource("1_gbqeo")
centered = false
region_enabled = true
region_rect = Rect2(1312, 1536, 736, 256)

[node name="LabelHP" type="Label" parent="PanelBL"]
layout_mode = 0
offset_left = 564.0
offset_top = 132.0
offset_right = 704.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "18.000 / 20.000"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="HpBallCircle" type="Area2D" parent="PanelBL"]
unique_name_in_owner = true
position = Vector2(633, 144)
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelBL/HpBallCircle"]
shape = SubResource("CircleShape2D_g80tl")

[node name="ContainerStats1" type="VBoxContainer" parent="PanelBL"]
layout_mode = 0
offset_left = 201.0
offset_top = 30.0
offset_right = 252.0
offset_bottom = 198.0
alignment = 1

[node name="Str" type="Label" parent="PanelBL/ContainerStats1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Str: "

[node name="Agi" type="Label" parent="PanelBL/ContainerStats1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Agi: "

[node name="Int" type="Label" parent="PanelBL/ContainerStats1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Int: "

[node name="MoveSpeed" type="Label" parent="PanelBL/ContainerStats1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- M.S.: "

[node name="AttackSpeed" type="Label" parent="PanelBL/ContainerStats1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- A.S.: "

[node name="LifeSteal" type="Label" parent="PanelBL/ContainerStats1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- L.S.: "

[node name="ContainerStats1Values" type="VBoxContainer" parent="PanelBL"]
layout_mode = 0
offset_left = 250.0
offset_top = 30.0
offset_right = 339.0
offset_bottom = 198.0
alignment = 1

[node name="Lab1" type="Label" parent="PanelBL/ContainerStats1Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"

[node name="Lab2" type="Label" parent="PanelBL/ContainerStats1Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"

[node name="Lab3" type="Label" parent="PanelBL/ContainerStats1Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="Lab4" type="Label" parent="PanelBL/ContainerStats1Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="Lab5" type="Label" parent="PanelBL/ContainerStats1Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="Lab6" type="Label" parent="PanelBL/ContainerStats1Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="ContainerStats2" type="VBoxContainer" parent="PanelBL"]
layout_mode = 0
offset_left = 350.0
offset_top = 30.0
offset_right = 404.0
offset_bottom = 198.0
alignment = 1

[node name="Damage" type="Label" parent="PanelBL/ContainerStats2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Dam: "

[node name="MagicDamage" type="Label" parent="PanelBL/ContainerStats2"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- M.D.: "

[node name="Defense" type="Label" parent="PanelBL/ContainerStats2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Def.: "

[node name="Evasion" type="Label" parent="PanelBL/ContainerStats2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Eva.: "

[node name="Stun" type="Label" parent="PanelBL/ContainerStats2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Stun: "

[node name="Critic" type="Label" parent="PanelBL/ContainerStats2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
text = "- Crit.: "

[node name="ContainerStats2Values" type="VBoxContainer" parent="PanelBL"]
layout_mode = 0
offset_left = 401.0
offset_top = 30.0
offset_right = 490.0
offset_bottom = 198.0
alignment = 1

[node name="Lab1" type="Label" parent="PanelBL/ContainerStats2Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"

[node name="Lab2" type="Label" parent="PanelBL/ContainerStats2Values"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"

[node name="Lab3" type="Label" parent="PanelBL/ContainerStats2Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="Lab4" type="Label" parent="PanelBL/ContainerStats2Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="Lab5" type="Label" parent="PanelBL/ContainerStats2Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="Lab6" type="Label" parent="PanelBL/ContainerStats2Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "---"
justification_flags = 35

[node name="HeroType" type="Label" parent="PanelBL"]
layout_mode = 2
offset_left = 7.0
offset_top = 17.0
offset_right = 188.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "Hero Type"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="HeroAlias" type="Label" parent="PanelBL"]
layout_mode = 2
offset_left = 39.0
offset_top = 40.0
offset_right = 158.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_styles/normal = ExtResource("4_0ehin")
text = "Alias"
horizontal_alignment = 1
text_overrun_behavior = 3
uppercase = true

[node name="Level" type="Label" parent="PanelBL"]
layout_mode = 0
offset_left = 76.0
offset_top = 160.0
offset_right = 116.0
offset_bottom = 196.0
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "32"
horizontal_alignment = 1

[node name="LabelExp" type="Label" parent="PanelBL"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 24.0
offset_top = 215.0
offset_right = 219.0
offset_bottom = 241.0
theme_override_colors/font_color = Color(0.827451, 0.772549, 0.67451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "22"

[node name="MyEffects" parent="PanelBL" instance=ExtResource("4_fo7ei")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = -25.0
offset_right = 320.0
offset_bottom = 7.0

[node name="PanelBR" type="Panel" parent="."]
offset_left = 1184.0
offset_top = 824.0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_acekp")

[node name="ManaBall" type="Sprite2D" parent="PanelBR"]
modulate = Color(0, 0.4, 0.8, 1)
texture_filter = 1
position = Vector2(27, 70)
texture = ExtResource("1_gbqeo")
centered = false
region_enabled = true
region_rect = Rect2(1157, 1897, 155, 151)

[node name="Sprite" type="Sprite2D" parent="PanelBR"]
texture = ExtResource("1_gbqeo")
centered = false
region_enabled = true
region_rect = Rect2(1312, 1792, 736, 256)

[node name="LabelMana" type="Label" parent="PanelBR"]
layout_mode = 0
offset_left = 31.0
offset_top = 132.0
offset_right = 171.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "18.000 / 20.000"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="SkillSlotsContainer" type="Node2D" parent="PanelBR"]
position = Vector2(165, -5)

[node name="SkillSlot1" parent="PanelBR/SkillSlotsContainer" instance=ExtResource("3_acekp")]
offset_left = 146.0
offset_top = 58.0
offset_right = 231.0
offset_bottom = 144.0

[node name="SkillSlot2" parent="PanelBR/SkillSlotsContainer" instance=ExtResource("3_acekp")]
offset_left = 254.0
offset_top = 58.0
offset_right = 339.0
offset_bottom = 144.0

[node name="SkillSlot3" parent="PanelBR/SkillSlotsContainer" instance=ExtResource("3_acekp")]
offset_left = 362.0
offset_top = 58.0
offset_right = 447.0
offset_bottom = 144.0

[node name="SkillSlot4" parent="PanelBR/SkillSlotsContainer" instance=ExtResource("3_acekp")]
offset_left = 470.0
offset_top = 58.0
offset_right = 555.0
offset_bottom = 144.0

[node name="ManaBallCircle" type="Area2D" parent="PanelBR"]
unique_name_in_owner = true
position = Vector2(104, 144)
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelBR/ManaBallCircle"]
shape = SubResource("CircleShape2D_g80tl")

[node name="LabelFPS" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 301.0
offset_right = 378.0
offset_bottom = 23.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "FPS:"

[node name="MyTooltip" parent="." instance=ExtResource("5_g80tl")]
offset_left = 661.0
offset_top = 124.0
offset_right = 661.0
offset_bottom = 124.0
